# learning-rust-web-scraper

./: .gitignore  Cargo.toml
src/: main.rs  model.rs  scrapers.rs
src/scrapers/: climatico.rs  mod.rs
