[package]
name = "proconfort-rust-scraper"
version = "0.1.0"
authors = ["Paul-Sebastian Manole <brokenthorn@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"

fantoccini = "0.12.0-alpha.4"
url = "2.1"
futures = "0.3"
futures-util = "0.3"

select = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "0.2.0-alpha.6", features = ["rt-full"] }
