[package]
name = "proconfort-rust-scraper"
version = "0.1.0"
authors = ["Paul-Sebastian Manole <brokenthorn@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
env_logger = "0.7"
fantoccini = "0.12"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
select = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.0"
